# bt_led_strip_controller

./: .drone.yml  Dockerfile  Makefile  README.rst  entrypoint.sh  pyproject.toml  requirements.txt
led_hack/: main.py  web.py
led_hack/api/: govee.py  mirror.py
led_hack/strips/: __init__.py  govee.py  mirror.py
tests/: test_led_hack.py
